2007-07-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-mode-line-map): New const.
	(vc-mode-line): Use it.

2007-07-23  Alexandre Julliard <julliard@winehq.org>

	* vc-git.el (vc-git-delete-file, vc-git-rename-file)
	(vc-git-unregister): New functions.
	(vc-git-find-version): Use the result of ls-files as a parameter
	for cat-file

2007-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes)
	(tramp-handle-file-attributes-with-stat)
	(tramp-handle-directory-files-and-attributes-with-stat)
	(tramp-convert-file-attributes): Handle huge file sizes.

2007-07-23  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-message-function): New variable.
	(isearch-update, isearch-search): Use it.

	* simple.el (goto-history-element): New function created from
	next-history-element.
	(next-history-element): Most code moved to goto-history-element.
	Call goto-history-element with (- minibuffer-history-position n).
	(previous-history-element): Call goto-history-element with (+
	minibuffer-history-position n).
	(minibuffer-setup-hook): Add minibuffer-history-isearch-setup.
	(minibuffer-history-isearch-message-overlay): New buffer-local variable.
	(minibuffer-history-isearch-setup, minibuffer-history-isearch-end)
	(minibuffer-history-isearch-search, minibuffer-history-isearch-message)
	(minibuffer-history-isearch-wrap, minibuffer-history-isearch-push-state)
	(minibuffer-history-isearch-pop-state): New functions.

2007-07-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc-hooks.el (vc-stay-local-p): Fix bug: Avoid remove-if-not.
	Also, if FILE is a list, return non-nil if any of its elements
	should stay local.  Update docstring.

2007-07-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/copyright.el (copyright-update-year): Fix 2007-05-25
	change by reverting a small part.

2007-07-23  Richard Stallman  <rms@gnu.org>
